--- a/public/birthday-invite.html
+++ b/public/birthday-invite.html
@@ -14,4 +14,4 @@
 
 <h3>This is were you need to go:</h3>
 
-<a href="https://maps.app.goo.gl/Hq1WhJ34Ujfp2VXM6">Google maps link</a>
+<a href="https://www.google.com/maps/@35.7040744,139.5577317,3a,75y,291.06h,73.89t,0.01r/data=!3m6!1e1!3m4!1sgT28ssf0BB2LxZ63JNcL1w!2e0!7i13312!8i6656?entry=ttu">Google maps link</a>
